--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# python
+*.pyc
+
 # OS generated files
 .DS_Store?
 ehthumbs.db
@@ -5,5 +8,5 @@ Icon?
 Thumbs.db
 
 # makefile
-pdfminer/
+pdfminer/cmap/
 build/
