--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: python
 python:
-  - "2.6"
-  - "2.7"
+  - "3.7"
 install:
-  - pip install pycrypto
+  - pip install pycryptodome
 script:
   - make test
