Fixed copy pasta error

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -3,7 +3,7 @@ name: Unittest
 on: [push]
 
 jobs:
-  flake8:
+  unittest:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout out repository
