Add actions to all branches

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,9 +5,11 @@ name: Python application
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - '**'
   pull_request:
-    branches: [ "master" ]
+    branches:
+      -'**'
 
 permissions:
   contents: read
