Restoring the branches

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,11 +5,9 @@ name: Python application
 
 on:
   push:
-    branches:
-      - '**'
+    branches: ['master']
   pull_request:
-    branches:
-      -'**'
+    branches: ['master']
 
 permissions:
   contents: read
