Cleaned code with flake8

--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -4,6 +4,8 @@ on: [push]
 
 jobs:
   flake8:
+    enabled: true
+    config_file: .flake8
     runs-on: ubuntu-latest
     steps:
       - name: Checkout out repository
@@ -14,5 +16,3 @@ jobs:
           python-version: "3.9"
       - name: Run flake8
         uses: py-actions/flake8@v2
-
-
